--- a/examples/google_storage/components/google_api/CMakeLists.txt
+++ b/examples/google_storage/components/google_api/CMakeLists.txt
@@ -2,4 +2,6 @@ set(COMPONENT_SRCDIRS .)
 
 set(COMPONENT_ADD_INCLUDEDIRS include)
 
+set(COMPONENT_REQUIRES esp_http_client json)
+
 register_component()
